# paysafe-papi-python-sdk

./: .gitignore  README.md  fixed_api_client.py  fixed_async_client.py  fixed_test_api_client.py  fixed_test_async_client.py  fixed_test_async_payment.py  fixed_test_payment.py  main.py  pyproject.toml  setup.cfg  setup.py
docs/: api_reference.rst  conf.py  index.rst  quickstart.rst
examples/: agent_testing.py  ai_agent_demo.py  ai_integration_test_demo.py  ai_long_running_demo.py  async_retry_demo.py  async_usage.py  credentials_file_demo.py  payload_logging_demo.py  retry_demo.py  sync_usage.py
paysafe/: __init__.py  api_client.py  async_client.py  exceptions.py  retry.py  utils.py  version.py
paysafe/ai/: __init__.py  agents.py  base.py  config.py
paysafe/api_resources/: __init__.py  async_payment.py  card.py  customer.py  payment.py  refund.py  webhook.py
paysafe/models/: __init__.py  card.py  customer.py  payment.py  refund.py  webhook.py
paysafe/testing/: __init__.py  mock_client.py  mock_server.py  payment_agents.py
scripts/: lint.py
templates/: 404.html  500.html  documentation.html  examples.html  index.html  layout.html  testing.html
tests/: __init__.py  conftest.py  test_ai_async_integration.py  test_ai_integration.py  test_api_client.py  test_async_client.py  test_async_payment.py  test_customer.py  test_payload_logging.py  test_payment.py  test_retry.py  test_retry_integration.py
